Implemented my rentals page and refactored login page

--- a/frontend/car_rental/src/components/Header.css
+++ b/frontend/car_rental/src/components/Header.css
@@ -67,3 +67,20 @@
 .sign-up-btn:hover {
     background-color: var(--primary-hover);
 }
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(3px);
+
+    z-index: 9999;
+}
