--- a/frontend/car_rental/src/authentication/signup/Signup.css
+++ b/frontend/car_rental/src/authentication/signup/Signup.css
@@ -83,21 +83,20 @@
 }
 
 .sign-up-help {
-    margin-top: 1.5rem;
-    font-size: 0.875rem; /* 14px */
-    color: #777;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #666;
+    padding-top: 10px;
+    border-top: 1px solid #eee;
 }
 
-.sign-up-help a {
+.link-text {
     color: #007bff;
-    text-decoration: none;
-    font-weight: 500;
-}
-
-.sign-up-help a:hover {
-    text-decoration: underline;
-}
-
-.sign-up-help .login-link {
+    font-weight: 600;
     cursor: pointer;
+    margin-left: 5px;
+}
+
+.link-text:hover {
+    text-decoration: underline;
 }
